# encryptKeeper

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: check-env.mjs  run-tauri.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: archive_service.rs  crypto_service.rs  key_manager.rs  mod.rs  pinned_settings_service.rs  secure_temp.rs  session_manager.rs  vault_service.rs
src/components/ui/: button.tsx  card.tsx  input.tsx  switch.tsx  textarea.tsx
src/lib/: api.ts  mockBackend.ts  noteName.test.ts  noteName.ts
