[package]
name = "encryptkeeper"
version = "0.1.3"
description = "Secure desktop note vault for .gpg text files"
authors = ["Codex"]
edition = "2021"

[lib]
name = "encryptkeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
